syntax = "proto3";
package dummy;

service DummyService {
    rpc GetEntity(GetEntityReq) returns (GetEntityResp) {}
}

message GetEntityReq {
    string id = 1;
    string user_id = 2;
}

message GetEntityResp {
    Entity entity = 1;
}

message Entity {
    string id = 1;
}
