syntax = "proto3";
package proto;

service ApiService {
    rpc CreateUser(CreateUserReq) returns (CreateUserResp) {}
    rpc GetUser(GetUserReq) returns (GetUserResp) {}
    rpc ListUsers(ListUsersReq) returns (ListUsersResp) {}
}

message CreateUserReq {
    string google_id = 1;
}
message CreateUserResp {
    string id = 1;
}

message GetUserReq {
  oneof identifier {
    string id = 1;
    string google_id = 2;
  }
}
message GetUserResp {
    User user = 1;
}

message ListUsersReq {}
message ListUsersResp {
    repeated User users = 1;
}

message User {
    string id = 1;
}
